--- a/Changes
+++ b/Changes
@@ -1,3 +1,3 @@
-0.001   2018-01-09 (PERLANCAR)
+0.001   2018-04-29 (PERLANCAR)
 
-        - First release. From Acme::CPANLists::PERLANCAR::FooThis.
+        - First release.
