--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.002   2021-03-13  Released-By: PERLANCAR; Urgency: medium
+
+	- Add entry: App::envset.
+
+
 0.001   2018-04-29  Released-By: PERLANCAR
 
         - First release.
