--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.003   2021-03-15  Released-By: PERLANCAR; Urgency: medium
+
+	- Add entry: App::AsciiChart.
+
+	- [doc] Mention some other Acme::CPANModules::PortedFrom::*
+	  modules.
+
+
 0.002   2021-03-13  Released-By: PERLANCAR; Urgency: medium
 
 	- Add entry: App::envset.
