--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+0.004   2021-03-15  Released-By: PERLANCAR; Urgency: low
+
+        - No functional changes.
+
+        - [build] Rebuild with updated
+          Pod::Weaver::PluginBundle::Author::PERLANCAR to generate Contributing
+          POD section.
+
+
 0.003   2021-03-15  Released-By: PERLANCAR; Urgency: medium
 
 	- Add entry: App::AsciiChart.
