--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.005   2023-09-25  Released-By: PERLANCAR; Urgency: medium
+
+        - Add entry: Is::Bot.
+
+
 0.004   2021-03-15  Released-By: PERLANCAR; Urgency: low
 
         - No functional changes.
