--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.007   2024-01-15  Released-By: PERLANCAR; Urgency: medium
+
+        - Add entry: Hash::Util::Pick.
+
+
 0.006   2024-01-15  Released-By: PERLANCAR; Urgency: medium
 
         - Add entry: Sub::Fp.
